vlib/v/checker/tests/void_fn_as_value.out
vlib/v/checker/tests/void_fn_as_value.v:5:8: error: unknown function: x
    3 | fn main() {
    4 |   mut a := 'aa'
    5 |   a += x('a','b')
      |        ~~~~~~~~~~
    6 |   mut b := 'abcdef'
    7 |   _ = b
