vlib/v/checker/tests/void_fn_as_value.vv
module main

fn main() {
	mut a := 'aa'
	a += x('a','b')
	mut b := 'abcdef'
	_ = b
	_ = a
}
